# Pywalnium

./: README.md  install.sh  pyproject.toml
src/pywalnium/: __init__.py  apps.py  cli.py  colors.py  core.py  paths.py  renderers.py
