[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywalnium"
version = "0.1.0"
description = "Feature-rich pywal color generation helper for Arch Linux apps"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "pywalnium" }
]
license = { text = "MIT" }
keywords = ["pywal", "colorscheme", "arch", "theming", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.scripts]
pywalnium = "pywalnium.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
